...
        values,
        errors,
        touched,
      }) => (
        <View style={styles.container}>
          <ITInput
            label="Usuario"
            placeholder="Ingresa tu usuario"
            leftIcon="account-outline"
            value={values.username}
            onChangeText={handleChange('username')}
            onBlur={handleBlur('username')}
            error={errors.username}
            touched={touched.username}
            disabled={loading}
          />

          <ITInput
            label="Contraseña"
            placeholder="Ingresa tu contraseña"
            leftIcon="lock-outline"
            rightIcon={showPassword ? 'eye-off' : 'eye'}
            onRightIconPress={() => setShowPassword(!showPassword)}
            secureTextEntry={!showPassword}
            value={values.password}
...
