appId: com.axzydev.fansal.checkapp
---
- clearState
- launchApp
- tapOn: 'Usuario'
- inputText: 'admin'
- tapOn: 'Contraseña'
- inputText: '123456'
- tapOn: 'Entrar al Sistema'
- assertVisible: 'Dashboard'
